# onKaul

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  chat.sh  ci.sh  cli.py  config.py  docker-compose.yml  installer.sh  main.py  plan.md  pyproject.toml  requirements.txt  setup.sh  setup_repos.sh  test-investigation.json  test-jira-payload.json  test-real-sentry-jira.json  test-real-sentry.json  test-slack-payload.json  test_pr_review.py
.github/workflows/: ci.yml
agent/: __init__.py  core.py  model_selector.py  prompts.py  research_detector.py
agent/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
api/: chat.py  conversation_store.py  sandbox.py  web_chat.py  webhooks.py
bee/: __init__.py  queue.py  tasks.py  worker.py
clients/: brave_search.py  confluence.py  datadog.py  gemini.py  github.py  jira.py  sentry.py  slack.py  websearch.py
docs/: attachment-support.md  configuration.md  deploy-webapp-aws.md  integrations-confluence.md  integrations-datadog.md  integrations-github.md  integrations-jira.md  integrations-sentry.md  integrations-slack.md  monitoring-config.md  overview.md  quickstart.md  repository-config.md  sandbox.md  troubleshooting.md  web-search-setup.md
plan/: hosting.md  worker-bee-architecture.md
repository_config/: loader.py  monitoring.py  monitoring_config_example.json  monitoring_loader.py  repo_config_example.json  repositories.py
sandbox/: Dockerfile  entrypoint.sh
scripts/: setup_repos.py
static/: index.html
tests/: conftest.py  test_agent_core.py  test_anthropic_provider.py  test_api_chat.py  test_api_webhooks.py  test_fix_executor.py  test_local_code.py  test_model_selector.py  test_openai_provider.py  test_sandbox.py  test_tools_handlers.py  test_worker_tasks.py
tools/: __init__.py  fix_executor.py  handlers.py  legal.py  local_code.py  pr_review.py  regulatory.py  schemas.py
utils/: attachment_processor.py  jira_formatter.py  logger.py  slack_formatter.py  tee_logger.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
web/src/components/: ChatWindow.tsx  MessageInput.tsx  NewProjectModal.tsx  SandboxView.tsx  SharedSandboxView.tsx  Sidebar.tsx  Terminal.tsx  devices.ts
worker/: tasks.py
