[project]
name = "onkaul"
version = "0.1.0"
description = "Internal developer assistant agent"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
urls = { Repository = "https://github.com/vaibhavkaul/onKaul", Issues = "https://github.com/vaibhavkaul/onKaul/issues" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "pytesseract>=0.3.13",
    "Pillow>=11.2.0",
    "PyMuPDF>=1.25.0",
    "datadog-api-client>=2.32.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
]

[project.scripts]
onkaul = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "utils", "worker"]
include = ["cli.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
exclude = "(^|/)(fixes|workplace)/"
